--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -1,6 +1,5 @@
 daemon off;
 #Heroku dynos have at least 4 cores.
-#ffff
 worker_processes <%= ENV['NGINX_WORKERS'] || 4 %>;
 
 events {
@@ -30,10 +29,9 @@ http {
 	error_log <%= ENV['NGINX_ERROR_LOG_PATH'] || 'logs/nginx/error.log' %>;
 
 
-	#upstream app_server {
-		#server unix:/tmp/nginx.socket fail_timeout=0;
-	#	server maral.herokuapp.com;
-	#}
+	upstream app_server {
+		server unix:/tmp/nginx.socket fail_timeout=0;
+	}
 
 	server {
 		listen <%= ENV["PORT"] %>;
@@ -41,7 +39,7 @@ http {
 		keepalive_timeout 5;
 
 		location / {
-			try_files  $uri $uri/ maral.herokuapp.com =404;
+			try_files  $uri $uri/ @app_server =404;
 			gzip on;
 			gzip_types application/javascript image/* text/css;
 			sendfile on;
@@ -50,7 +48,7 @@ http {
 			tcp_nodelay       on;
     		keepalive_timeout 65;
 			
-			proxy_pass http://maral.herokuapp.com;
+			proxy_pass http://app_server;
 			#proxy_set_header X-Real-IP $remote_addr;
 			#proxy_set_header Host $host;
 			#proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -69,5 +67,7 @@ http {
 		#location ~* \.(css|js)$ {
 		#	expires 7d;
 		#}
+
+		root /app/public
 	}
 }
