--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -18,7 +18,7 @@ http {
 	
 	server_tokens off;
 	sendfile on;
-	#sendfile_max_chunk 2m;
+	sendfile_max_chunk 2m;
 
 
 	#Must read the body in 5 seconds.
@@ -39,13 +39,13 @@ http {
 		listen <%= ENV["PORT"] %>;
 		server_name maral.herokuapp.com www.maral.herokuapp.com;
 		keepalive_timeout 5;
-		#tcp_nopush on;
-		#tcp_nodelay       on;
+		tcp_nopush on;
+		tcp_nodelay       on;
 
 		location / {
-			try_files  $uri $uri/ @app_server =404;
-			gzip on;
-			gzip_types application/javascript image/* text/css;
+			#try_files  $uri $uri/ @app_server =404;
+			#gzip on;
+			#gzip_types application/javascript image/* text/css;
 
 			
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -56,21 +56,25 @@ http {
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
-			#proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Real-IP $remote_addr;
 			
 		}
 
-		
+		location /public {
+			try_files  $uri $uri/ @app_server =404;
+			gzip on;
+			gzip_types application/javascript image/* text/css;
+		}
 
 		# location /views
 
-		#location ~* \.(jpg|jpeg|png|gif|ico)$ {
-       	#	expires 30d;
-		#}
+		location ~* \.(jpg|jpeg|png|gif|ico)$ {
+       		expires 30d;
+		}
 
-		#location ~* \.(css|js)$ {
-		#	expires 7d;
-		#}
+		location ~* \.(css|js)$ {
+			expires 7d;
+		}
 
 		#root /app/public;
 	}
