--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -20,7 +20,6 @@ http {
 	sendfile on;
 	sendfile_max_chunk 2m;
 
-
 	#Must read the body in 5 seconds.
 	client_body_timeout 5;
 
@@ -29,7 +28,6 @@ http {
                     	'"$http_user_agent" "$http_x_forwarded_for"';
 	access_log <%= ENV['NGINX_ACCESS_LOG_PATH'] || 'logs/nginx/access.log' %> main;
 	error_log <%= ENV['NGINX_ERROR_LOG_PATH'] || 'logs/nginx/error.log' %>;
-
 
 	upstream app_server {
 		server unix:/tmp/nginx.socket fail_timeout=0;
@@ -43,11 +41,10 @@ http {
 		tcp_nodelay       on;
 
 		location / {
-			#try_files  $uri $uri/ @app_server =404;
-			#gzip on;
-			#gzip_types application/javascript image/* text/css;
+			try_files  $uri $uri/ @app_server =404;
+			gzip on;
+			gzip_types application/javascript image/* text/css;
 
-			
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
@@ -60,13 +57,11 @@ http {
 			
 		}
 
-		location /public {
-			try_files  $uri $uri/ @app_server =404;
-			gzip on;
-			gzip_types application/javascript image/* text/css;
-		}
-
-		# location /views
+		#location /public {
+		#	try_files  $uri $uri/ @app_server =404;
+		#	gzip on;
+		#	gzip_types application/javascript image/* text/css;
+		#}
 
 		#location ~* \.(jpg|jpeg|png|gif|ico)$ {
        	#	expires 30d;
