nginx config update

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -41,10 +41,6 @@ http {
 		tcp_nodelay       on;
 
 		location / {
-			try_files  $uri $uri/ @app_server =404;
-			gzip on;
-			gzip_types application/javascript image/* text/css;
-
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
@@ -57,11 +53,11 @@ http {
 			
 		}
 
-		#location /public {
-		#	try_files  $uri $uri/ @app_server =404;
-		#	gzip on;
-		#	gzip_types application/javascript image/* text/css;
-		#}
+		location /public {
+			try_files  $uri $uri/ @app_server =404;
+			gzip on;
+			gzip_types application/javascript image/* text/css;
+		}
 
 		#location ~* \.(jpg|jpeg|png|gif|ico)$ {
        	#	expires 30d;
