--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -13,8 +13,12 @@ http {
 	default_type application/octet-stream;
 
     gzip on;
-    gzip_comp_level 2;
-	gzip_min_length 512;
+	#gzip_comp_level 2;
+	gzip_vary on;
+	gzip_min_length 1024;
+	gzip_proxied expired no-cache no-store private auth;
+	gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+	gzip_disable "MSIE [1-6]\.";
 	
 	server_tokens off;
 	sendfile on;
@@ -54,9 +58,10 @@ http {
 		}
 
 		location /public {
-			try_files  $uri $uri/ @app_server =404;
-			gzip on;
-			gzip_types application/javascript image/* text/css;
+			#try_files  $uri $uri/ @app_server =404;
+			#gzip on;
+			#gzip_types application/javascript image/* text/css;
+			expires 15d;
 		}
 
 		#location ~* \.(jpg|jpeg|png|gif|ico)$ { #caching
