--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -17,7 +17,7 @@ http {
 	gzip_vary on;
 	gzip_min_length 200;
 	gzip_proxied expired no-cache no-store private auth;
-	gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+	gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml image/jpeg image/png;
 	gzip_disable "MSIE [1-6]\.";
 	
 	server_tokens off;
