--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -15,7 +15,7 @@ http {
     gzip on;
 	#gzip_comp_level 2;
 	gzip_vary on;
-	gzip_min_length 200;
+	gzip_min_length 1024;
 	gzip_proxied expired no-cache no-store private auth;
 	gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml image/jpeg image/png;
 	gzip_disable "MSIE [1-6]\.";
@@ -57,12 +57,12 @@ http {
 			
 		}
 
-		location /public {
+		#location /public {
 			#try_files  $uri $uri/ @app_server =404;
 			#gzip on;
 			#gzip_types application/javascript image/* text/css;
-			expires 15d;
-		}
+		#	expires 15d;
+		#}
 
 		#location ~* \.(jpg|jpeg|png|gif|ico)$ { #caching
        	#	expires 30d;
