--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -45,6 +45,11 @@ http {
 		tcp_nodelay       on;
 
 		location / {
+			#root /var/tools/public;
+			try_files  $uri $uri/ @app_server =404;
+		}
+
+		location @app_server {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
