--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -46,7 +46,7 @@ http {
 
 		location / {
 			root /app/public;
-			try_files  $uri $uri/ @app_server =404;
+			try_files  $uri $uri/ @app_server;
 		}
 
 		location @app_server {
