--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -46,11 +46,10 @@ http {
 
 		location / {
 			alias /app/public;
-			try_files  $uri $uri/ @app_server;
+			try_files  $uri @app_server;
 		}
 
 		location @app_server {
-			alias /
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
