--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -53,14 +53,20 @@ http {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
 			proxy_redirect off;
-			proxy_pass http://app_server;
+
 			# Following is necessary for Websocket support
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "upgrade";
 			proxy_set_header X-Real-IP $remote_addr;
 			
-			proxy_cache_bypass $http_upgrade;#
+			#proxy_cache_bypass $http_upgrade;##
+			proxy_cache custom_cache;#
+			proxy_cache_bypass  $http_cache_control;#
+			add_header X-Proxy-Cache $upstream_cache_status;#
+			proxy_set_header X-Forwarded-Proto $scheme;#
+
+			proxy_pass http://app_server;
 		}
 
 		#location ~* \.(jpg|jpeg|png|gif|ico)$ { #caching
