--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -19,6 +19,7 @@ http {
 	gzip_proxied expired no-cache no-store private auth;
 	gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml image/jpeg image/png;
 	gzip_disable "MSIE [1-6]\.";
+	underscores_in_headers on;
 	
 	server_tokens off;
 	sendfile on;
