added google analytics and authorization

--- a/views/legals.ejs
+++ b/views/legals.ejs
@@ -100,6 +100,10 @@
 				Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.
 			</p>
 
+			<p class="justify">
+				Certaines données sont susceptibles d'être traitées par google dans le cadre de l'analyse du bon fonctionnement du site web.
+			</p>
+
 			<strong>7. E-mails :</strong><br />
 
 			<p class="justify">
