--- a/views/About.ejs
+++ b/views/About.ejs
@@ -215,7 +215,7 @@
      </div>
 	</div>
 
-	<script src="/scripts/menu-arrow.js"></script>
+	<script src="/scripts/core/menu-arrow.js"></script>
 	<script src="/scripts/core/frontValidation.js"></script>
 	<script src="/scripts/submit-contact.js"></script>
 	<% include partials/footer %>
