--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,16 +3,7 @@
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-173937073-1"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag("js", new Date());
-			gtag("config", "UA-173937073-1");
-
-			gtag("anonymizeIp", true); //////////might not work
-		</script>
+		<script src="/scripts/analytics.js"></script>
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
