added handling for maintenance on blog/gal/shop, made loader disappear when everything has been loaded, removed inline scripts for tabs/menu/infinite loading/expands

--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -5,12 +5,12 @@
 		<div class="menu menu-login col-xl-3 col-md-2">
 			<ul>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'login')" class="menu-link active disabled">
+					<a href="#" id="login-btn" class="menu-link active disabled">
 						<i class="fas fa-sign-in-alt mr-2"></i> <span>Sign up/Log in</span> <i class="fas fa-chevron-right chev"></i
 					></a>
 				</li>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'lostpw-container')" class="menu-link"
+					<a href="#" id="lostpw-container-btn" class="menu-link"
 						><i class="fas fa-key mr-2"></i>
 						<span>Lost password</span>
 						<i class="fas fa-chevron-right chev"></i
