--- a/views/User.ejs
+++ b/views/User.ejs
@@ -5,15 +5,15 @@
 		<div class="menu col-xl-3 col-2">
 			<ul>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'parameters')" class="menu-link"> <i class="fas fa-cog mr-2"></i><span>Parameters</span> <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" id="parameters-btn" class="menu-link"> <i class="fas fa-cog mr-2"></i><span>Parameters</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'delivery')" class="menu-link active disabled">
+					<a href="#" id="delivery-btn" class="menu-link active disabled">
 						<i class="fas fa-truck mr-2"></i> <span>Delivery Informations</span><i class="fas fa-chevron-right chev"></i
 					></a>
 				</li>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'purchases')" class="menu-link"> <i class="fa fa-clock-o mr-2"></i><span>History</span> <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" id="purchases-btn" class="menu-link"><i class="fa fa-clock-o mr-2"></i><span>History</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
 					<a href="/shopping-cart"><i class="fas fa-shopping-cart mr-2"></i> <span>Cart</span></a>
