--- a/views/About.ejs
+++ b/views/About.ejs
@@ -1,22 +1,18 @@
 <% include partials/head %>
 
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-<script src="/scripts/blog/infiniteBlogs.js"></script>
 <div class="container-with-menu container">
 	<div class="row row-height">
 		<div class="menu col-xl-3 col-2">
 			<ul>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'blog')" class="menu-link active disabled">
-						<i class="fas fa-scroll mr-2"></i> <span>Blog</span> <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" id="blog-btn" class="menu-link active disabled"> <i class="fas fa-scroll mr-2"></i> <span>Blog</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'bio')" class="menu-link">
-						<i class="fas fa-address-card mr-2"></i> <span>Bio</span> <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" id="bio-btn" class="menu-link"> <i class="fas fa-address-card mr-2"></i> <span>Bio</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'contact')" class="menu-link">
-						<i class="fas fa-envelope mr-2"></i> <span>Contact</span> <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" id="contact-btn" class="menu-link"> <i class="fas fa-envelope mr-2"></i> <span>Contact</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
 					<a href="/Legals" class="menu-link"><i class="fa fa-gavel mr-2"></i> <span>Legals</span> <i class="fas fa-chevron-right chev"></i></a>
@@ -41,91 +37,81 @@
 		</div>
 
 		<div id="contact" class="tab col-xl-9 col-10 nodisplay">
-				<div class="col-md-10 offset-md-1 wrapper">
-					
-						<h1 class="single-title text-center">Contact</h1>
-						<hr class="hr-pwinty mt-3" />
-					<form class="col-md-10 offset-md-1 mt-4" id="contact" method="POST" onsubmit="submitContact(event)" action="/api/contact/">
-						<div class="row">
-							<div class="col-md-6">
-								<label class="control-label">Name</label>
-								<input
-									placeholder="Jean Dupont"
-									type="text"
-									name="name"
-									id="name"
-									onkeyup="Validate.String(this, 4, 30);"
-									value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>"
-									required
-								/>
-								<span id="i_name" class="form-info"><b>Username</b> must contain between <b>4 and 30 characters</b></span>
-							</div>
-							<div class="col-md-6">
-								<label class="control-label">Email</label>
-								<input
-									placeholder="jeandupont@gmail.com"
-									type="email"
-									name="email"
-									id="email"
-									onkeyup="Validate.Email(this);"
-									value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>"
-									required
-								/>
-								<span id="i_email" class="form-info"><b>E-mail</b> has to be <b>valid</b></span>
-							</div>
+			<div class="col-md-10 offset-md-1 wrapper">
+				<h1 class="single-title text-center">Contact</h1>
+				<hr class="hr-pwinty mt-3" />
+				<form class="col-md-10 offset-md-1 mt-4" id="contact" method="POST" onsubmit="submitContact(event)" action="/api/contact/">
+					<div class="row">
+						<div class="col-md-6">
+							<label class="control-label">Name</label>
+							<input
+								placeholder="Jean Dupont"
+								type="text"
+								name="name"
+								id="name"
+								onkeyup="Validate.String(this, 4, 30);"
+								value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>"
+								required
+							/>
+							<span id="i_name" class="form-info"><b>Username</b> must contain between <b>4 and 30 characters</b></span>
 						</div>
+						<div class="col-md-6">
+							<label class="control-label">Email</label>
+							<input
+								placeholder="jeandupont@gmail.com"
+								type="email"
+								name="email"
+								id="email"
+								onkeyup="Validate.Email(this);"
+								value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>"
+								required
+							/>
+							<span id="i_email" class="form-info"><b>E-mail</b> has to be <b>valid</b></span>
+						</div>
+					</div>
 
-						<label class="control-label">Object</label>
-						<input
-							placeholder="Hey, I found your painting really great..."
-							type="text"
-							name="title"
-							id="title"
-							onkeyup="Validate.String(this, 10, 256);"
-							value="<% if (locals.formData) { %><%= locals.formData.subject %><% } %>"
-							required
-						/>
-						<span id="i_title" class="form-info">Title must contain between 10 and 256 characters</span>
+					<label class="control-label">Object</label>
+					<input
+						placeholder="Hey, I found your painting really great..."
+						type="text"
+						name="title"
+						id="title"
+						onkeyup="Validate.String(this, 10, 256);"
+						value="<% if (locals.formData) { %><%= locals.formData.subject %><% } %>"
+						required
+					/>
+					<span id="i_title" class="form-info">Title must contain between 10 and 256 characters</span>
 
-						<label class="control-label">Message</label>
-						<textarea
-							id="content"
-							onkeyup="Validate.String(this, 64, 2048);"
-							rows="5"
-							name="content"
-							placeholder="Write your message here...."
-							required
-						>
+					<label class="control-label">Message</label>
+					<textarea id="content" onkeyup="Validate.String(this, 64, 2048);" rows="5" name="content" placeholder="Write your message here...." required>
 <% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea
-						>
-						<span id="i_content" class="form-info">Content must contain between 64 and 2048 characters</span>
+					>
+					<span id="i_content" class="form-info">Content must contain between 64 and 2048 characters</span>
 
-						<div class="text-center">
-							<div class="g-recaptcha" data-sitekey="6LdI27QZAAAAAMPWWk13a23BiIvOjAfFjI0MJWKl"></div>
-						</div>
-						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-						<input type="submit" class="logbtn mt-3" value="Send" id="submit-contact" />
-					</form>
-				</div>
+					<div class="text-center">
+						<div class="g-recaptcha" data-sitekey="6LdI27QZAAAAAMPWWk13a23BiIvOjAfFjI0MJWKl"></div>
+					</div>
+					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+					<input type="submit" class="logbtn mt-3" value="Send" id="submit-contact" />
+				</form>
+			</div>
 		</div>
 
 		<div id="bio" class="tab col-xl-9 col-10 nodisplay">
 			<div class="biography col-md-10 offset-md-1 wrapper pb-0 pt-4">
-					<div class="bio-img-wrapper col-sm-4 z-0">
-						<div class="sub-img-wrapper">
+				<div class="bio-img-wrapper col-sm-4 z-0">
+					<div class="sub-img-wrapper">
 						<img class="bio-img w-100" src="/img/upload/biopic.png" />
-						</div>
 					</div>
-					<div class="first-bio col-sm-8">
-						<h1 class="square-title">Maral Abkarian</h1>
-						<p class="square-txt ml-3">
-							Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de
-							leur terre natale par le génocide arménien en 1915, vécu dans différentes contrées à travers le monde.
-						</p>
-					</div>
+				</div>
+				<div class="first-bio col-sm-8">
+					<h1 class="square-title">Maral Abkarian</h1>
+					<p class="square-txt ml-3">
+						Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de
+						leur terre natale par le génocide arménien en 1915, vécu dans différentes contrées à travers le monde.
+					</p>
+				</div>
 				<div class="bio-body col-md-10 offset-md-1">
-				
-
 					<p class="square-txt">
 						C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne, faisant ses adieux à son Liban natal, qu’elle vit le jour. Dès son plus jeune âge,
 						elle fut remarquée pour son talent artistique et sa sensibilité, raflant régulièrement les premiers prix des concours artistiques scolaires, derrière son sourire timide et un caractère
@@ -159,64 +145,63 @@
 		<div id="blog" class="tab col-xl-9 col-10">
 			<div class="container container-blog h-100 p-0 m-0">
 				<div class="">
-				<div class="col-md-10 offset-md-1 wrapper z-0" id="container-blog">
-					<% if (locals.blogs){ %> <% Object.keys(locals.blogs).forEach(function (index) { %>
-					<div class="blog-row" id="<%= locals.blogs[index]._id %>">
-						<h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3>
-						<p class="blog-info">
-							uploaded by <b class="blog-author"><%= locals.blogs[index].author %></b>,
-							<i class="blog-date"><%= locals.blogs[index].date %></i>
-						</p>
+					<div class="col-md-10 offset-md-1 wrapper z-0" id="container-blog">
+						<% if (locals.blogs){ %> <% Object.keys(locals.blogs).forEach(function (index) { %>
+						<div class="blog-row" id="<%= locals.blogs[index]._id %>">
+							<h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3>
+							<p class="blog-info">
+								uploaded by <b class="blog-author"><%= locals.blogs[index].author %></b>,
+								<i class="blog-date"><%= locals.blogs[index].date %></i>
+							</p>
 
-						<% if (locals.blogs[index].thumbnail) { %>
-						<div class="blog-overlay-wrapper">
-							<div class="blog-overlay">
+							<% if (locals.blogs[index].thumbnail) { %>
+							<div class="blog-overlay-wrapper">
+								<div class="blog-overlay">
+									<div class="content-holder ql-editor"></div>
+									<form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">See More</button></form>
+								</div>
+							</div>
+						</div>
+						<% } else { %>
+						<div class="blog-no-overlay-wrapper">
+							<div class="blog-no-overlay">
 								<div class="content-holder ql-editor"></div>
 								<form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">See More</button></form>
 							</div>
 						</div>
 					</div>
-					<% } else { %>
-					<div class="blog-no-overlay-wrapper">
-						<div class="blog-no-overlay">
-							<div class="content-holder ql-editor"></div>
-							<form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">See More</button></form>
-						</div>
-					</div>
-				</div>
-				<% } %>
-
-				<script>
-					toAppend = "<%= locals.blogs[index].shortcontent %>";
-					toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">");
-
-					document.getElementById("<%= locals.blogs[index]._id %>").querySelector(".content-holder").innerHTML = toAppend;
-
-					<% if (locals.blogs[index].thumbnail) { %>
-					  toAppend = "<%= locals.blogs[index].thumbnail %>";
-					  toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">");
-					  document.getElementById("<%= locals.blogs[index]._id %>").querySelector(".blog-overlay-wrapper").innerHTML += toAppend;
 					<% } %>
-				</script>
 
-				<% }) %> <% } else { %>
-				<div class="text-center m-5 p-5 bwhite" >
-					<h1>Blog page is under maintenance, please come back later</h1>
+					<script>
+						toAppend = "<%= locals.blogs[index].shortcontent %>";
+						toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">");
+
+						document.getElementById("<%= locals.blogs[index]._id %>").querySelector(".content-holder").innerHTML = toAppend;
+
+						<% if (locals.blogs[index].thumbnail) { %>
+						  toAppend = "<%= locals.blogs[index].thumbnail %>";
+						  toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">");
+						  document.getElementById("<%= locals.blogs[index]._id %>").querySelector(".blog-overlay-wrapper").innerHTML += toAppend;
+						<% } %>
+					</script>
+
+					<% }) %> <% } else { %>
+					<div class="text-center m-5 p-5 bwhite">
+						<h1>Blog page is under maintenance, please come back later</h1>
+					</div>
+					<% } %>
 				</div>
-				<% } %>
+				<div class="col-md-6 offset-md-3 mb-3 mt-3">
+					<img id="loader" src="/img/loader.gif" />
+					<input id="infinitebtn" type="submit" class="logbtn" value="Load more" />
+				</div>
 			</div>
-			<div class="col-md-6 offset-md-3 mb-3 mt-3">
-				<img id="loader" src="/img/loader.gif" />
-				<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteBlogs();" />
-			</div>
-			</div>
-    </div>
-    </div>
-     </div>
+		</div>
 	</div>
-
-	<script src="/scripts/core/menu-arrow.js"></script>
-	<script src="/scripts/core/frontValidation.js"></script>
-	<script src="/scripts/submit-contact.js"></script>
-	<% include partials/footer %>
 </div>
+
+<script src="/scripts/blog/infiniteBlogs.js" defer></script>
+<script src="/scripts/core/menu-arrow.js"></script>
+<script src="/scripts/core/frontValidation.js"></script>
+<script src="/scripts/submit-contact.js"></script>
+<% include partials/footer %>
