--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -1,6 +1,5 @@
 <% include partials/head %>
 
-<script src="/scripts/gallery/infiniteTags.js"></script>
 <script src="/scripts/core/bootstrap-tagsinput.js"></script>
 <script src="/scripts/cart.js"></script>
 
@@ -19,10 +18,10 @@
 		<div class="expandable-card" id="<%= locals.galleries[index]._id %>">
 			<div class="face face1 blog-overlay-wrapper mt-0">
 				<a href="#expand">
-					<img onclick="expand(this);" src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100" alt="<%= locals.galleries[index].title %>" />
+					<img src="/api/image/<%= locals.galleries[index].mainImgId %>" class="w-100 expandable" alt="<%= locals.galleries[index].title %>" />
 				</a>
 
-				<div class="blog-overlay" onclick="expand('<%= locals.galleries[index]._id %>', event, true)">
+				<div class="blog-overlay expandable" data-id="<%= locals.galleries[index]._id %>" data-isGallery="true">
 					<h4>
 						<i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].shorttitle %></a></i>
 					</h4>
@@ -40,7 +39,7 @@
 	<% if (!locals.error) { %>
 	<div class="col-md-6 offset-md-3 mb-3 mt-3">
 		<img id="loader" src="/img/loader.gif" />
-		<input id="infinitebtn" type="submit" class="logbtn" value="Load more" onclick="infiniteTags();" />
+		<input id="infinitebtn" type="submit" class="logbtn" value="Load more" />
 	</div>
 	<% } %>
 </div>
@@ -54,5 +53,6 @@
 </a>
 
 <input id="tagscontent" type="hidden" value="<%= locals.tags %>" />
-<script src="/scripts/gallery/tags.js"></script>
+<script src="/scripts/gallery/tags.js" defer></script>
+<script src="/scripts/gallery/infiniteTags.js" defer></script>
 <% include partials/footer %>
