--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -35,7 +35,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.4/quill.core.css" />
 
 		<script src="/scripts/core/errorMessages.js"></script>
-		<script src="/scripts/core/tools.js"></script>
+		<script src="/scripts/core/tools.js" defer></script>
 		<script src="/scripts/core/alert.js"></script>
 	</head>
 
