--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -14,7 +14,7 @@
             <% if (locals.images) { %>
               <% locals.images.forEach(function (item, index) { %>
                 <div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
-                  <a href="#expand"><img onclick="expand(this);" src="/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
+                  <a href="#expand"><img class="expandable" src="/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
                   <div class="carousel-caption d-none d-md-block">
                   </div>
                 </div>
