--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -10,7 +10,7 @@
 					<div class="carousel-inner" role="listbox">
 						<% if (locals.img) { %> <% locals.img.forEach(function (item, index) { %>
 						<div class="carousel-item <% if(index == 0) { %>active<% } %>">
-							<a href="#expand"><img onclick="expand(this);" src="/api/image/<%= item._id %>" alt="<%= index %>slide" /></a>
+							<a href="#expand"><img class="expandable" src="/api/image/<%= item._id %>" alt="<%= index %>slide" /></a>
 							<div class="carousel-caption d-none d-md-block"></div>
 						</div>
 						<% }) %> <% } %>
