--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -4,18 +4,18 @@
 	<div class="single-wrapper">
 		<div class="col-md-10 offset-md-1 wrapper">
 			<h1 class="single-title text-center">Modifier les images de l'accueil</h1>
-			<div class="alert alert-info alert-static mb-3" role="alert">
+			<div class="alert alert-info alert-static" role="alert">
 				Pensez à utiliser des images au format paysage...
 			</div>
 			<% if (locals.front) { %> <% for (let index = 0; index < 5; index++) { %> <% if (locals.front[index] && locals.front[index].null != true) { %>
-			<form class="text-center front-form" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
+			<form class="text-center front-form mt-3" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data">
 				<div class="form-group" id="uploadGroup<%= index %>">
 					<label for="upload<%= index %>" class="filebtn">Choisir une image</label>
-					<input type="file" name="img" id="upload<%= index %>" class="inputfile" onchange="readURL(this);" />
+					<input type="file" name="img" id="upload<%= index %>" class="inputfile" />
 				</div>
 				<img class="w-100" id="image<%= index %>" src="/api/front/image/<%= locals.front[index]._id %>" alt="uploadedImg" data-uploaded="true" />
 				<div class="form-group text-center">
-					<button id="delete<%= index %>" onclick="deleteImage(this, event);" class="delbtn">SUPPRIMER</button>
+					<button id="delete<%= index %>" class="delbtn">SUPPRIMER</button>
 				</div>
 				<input type="hidden" name="referenceId" value="<%= index %>" />
 				<div id="uploadbtn<%= index %>" class="form-group nodisplay">
@@ -24,14 +24,14 @@
 				</div>
 			</form>
 			<% } else { %>
-			<form class="text-center front-form" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
+			<form class="text-center front-form" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data">
 				<div class="form-group" id="uploadGroup<%= index %>">
 					<label for="upload<%= index %>" class="filebtn">Choisir une image</label>
-					<input type="file" name="img" id="upload<%= index %>" class="inputfile" onchange="readURL(this);" />
+					<input type="file" name="img" id="upload<%= index %>" class="inputfile" />
 				</div>
 				<img class="w-100 nodisplay" id="image<%= index %>" src="" alt="uploadedImg" data-uploaded="false" />
 				<div class="form-group text-center">
-					<button id="delete<%= index %>" onclick="deleteImage(this, event);" class="delbtn nodisplay">SUPPRIMER</button>
+					<button id="delete<%= index %>" class="delbtn nodisplay">SUPPRIMER</button>
 				</div>
 				<input type="hidden" name="referenceId" value="<%= index %>" />
 				<div id="uploadbtn<%= index %>" class="form-group nodisplay">
@@ -40,14 +40,14 @@
 				</div>
 			</form>
 			<% } %> <% } %> <% } else { %>
-			<form class="text-center front-form" name="upload0" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
+			<form class="text-center front-form" name="upload0" action="/api/front/post" method="POST" enctype="multipart/form-data">
 				<div class="form-group" id="uploadGroup0">
 					<label for="upload0" class="filebtn">Choisir une image</label>
-					<input type="file" name="img" id="upload0" class="inputfile" onchange="readURL(this);" />
+					<input type="file" name="img" id="upload0" class="inputfile" />
 				</div>
 				<img class="w-100 nodisplay" id="image0" alt="uploadedImg" data-uploaded="false" />
 				<div class="form-group text-center">
-					<button id="delete0" onclick="deleteImage(this, event);" class="delbtn nodisplay">Delete</button>
+					<button id="delete0" class="delbtn nodisplay">Delete</button>
 				</div>
 				<input type="hidden" name="referenceId" value="0" />
 				<div id="uploadbtn0" class="form-group nodisplay">
@@ -60,5 +60,5 @@
 	</div>
 </div>
 
-<script src="/scripts/frontScripts.js"></script>
+<script src="/scripts/frontScripts.js" defer></script>
 <% include ../partials/footer %>
