--- a/public/style.css
+++ b/public/style.css
@@ -214,17 +214,35 @@ input[type="radio"] {
 	padding: 10px;
 }
 
+html {
+	background: #028cb2; /* Old browsers */
+	background: -moz-linear-gradient(top, #028cb2 0%, #025a7f 39%, #004460 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #028cb2 0%, #025a7f 39%, #004460 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(
+		to bottom,
+		#028cb2 0%,
+		#025a7f 39%,
+		#004460 100%
+	); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#028cb2', endColorstr='#004460',GradientType=0 ); /* IE6-9 */
+}
+
+body {
+	background-attachment: fixed;
+	background-color: transparent;
+	min-height: 100vh !important;
+}
+
 body,
 html {
 	display: flex;
-	min-height: 100vh;
+	min-height: 100%;
 	flex-direction: column;
 
-	height: 100vh;
+	height: auto;
 	width: 100vw;
 	min-width: 500px;
-	background-attachment: fixed;
-	background-color: var(--brand-blue);
+
 	scroll-behavior: smooth;
 }
 
