--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -5,7 +5,7 @@
 	<div class="single-wrapper">
 		<div class="col-md-10 offset-md-1 wrapper">
 			<h1 class="single-title text-center">Modifier un item de la galerie</h1>
-			<form id="gallery" method="POST" action="/api/gallery/patch/<%= locals.gallery._id %>" enctype="multipart/form-data" onsubmit="patchGallery(event, '<%= locals.gallery._id %>');">
+			<form id="gallery" method="POST" action="/api/gallery/patch/<%= locals.gallery._id %>" enctype="multipart/form-data" data-patchgal="true" data-id="<%= locals.gallery._id %>">
 				<hr />
 				<div class="form-group">
 					<label class="control-label">Titre</label>
@@ -22,13 +22,13 @@
 				<div class="form-group">
 					<div class="form-group text-center">
 						<label for="img" id="imglabel" class="filebtn">Choisir des images</label>
-						<input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple />
+						<input class="inputfile" type="file" name="img" id="img" multiple />
 					</div>
 					<% if (locals.images) { %> <% locals.images.forEach(function (item) { %>
 					<img class="w-100 m-1" id="<%= item._id %>" src="/api/image/<%= item._id %>" />
 					<div id="actDiv<%= item._id %>" class="action-div <% if (item.isMain === true) { %> nodisplay<% } %>">
-						<a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
-						<a id="sel<%= item._id %>" onclick="setMain(event, this);" href="/api/image/select/Gallery/<%= locals.gallery._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
+						<a id="del<%= item._id %>" data-del="true" href="/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
+						<a id="sel<%= item._id %>" data-sel="true" href="/api/image/select/Gallery/<%= locals.gallery._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
 					</div>
 					<% }) %> <% } %>
 				</div>
@@ -48,8 +48,8 @@
 			</form>
 		</div>
 	</div>
-
-	<script src="/scripts/gallery/galleryScripts.js"></script>
-	<script src="/scripts/core/frontValidation.js"></script>
 </div>
+
+<script src="/scripts/gallery/galleryScripts.js" defer></script>
+<script src="/scripts/core/frontValidation.js"></script>
 <% include ../partials/footer %>
